Implemented WeekSummary methods, updated units tests