@@ -1,20 +1,17 @@
 package com.weatherappbackend.weatherforecast.week;
 
+import com.weatherappbackend.weatherforecast.week.description.DescriptionElement;
+import com.weatherappbackend.weatherforecast.week.description.Precipitation;
+import com.weatherappbackend.weatherforecast.week.description.Wind;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.*;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.*;
 
-@ExtendWith(MockitoExtension.class)
 class WeekTest {
-
-    @Mock
-    private Week week;
+    private final Week week = new WeekSummary();
 
     // pressure_msl (hPa)
     // sunshine_duration (s)
@@ -26,7 +23,6 @@ class WeekTest {
         double avg = week.countAvg(values);
         // then
         assertEquals(5.0, avg);
-
     }
 
     @Test
@@ -37,6 +33,18 @@ class WeekTest {
         double max = week.chooseMax(values);
         // then
         assertEquals(9.0, max);
+    }
+
+    @Test
+    void return_0_0001_when_list_of_max_or_min_is_empty() {
+        // given
+        List<Double> values = new ArrayList<>();
+        // when
+        double max = week.chooseMax(values);
+        double min = week.chooseMin(values);
+        // then
+        assertEquals(0.0001, max);
+        assertEquals(0.0001, min);
     }
 
     @Test
@@ -52,68 +60,64 @@ class WeekTest {
     @Test
     void add_default_value_when_given_values_are_empty() {
         // given
-        Map<String, List<Double>> values = new HashMap<>();
+        List<DescriptionElement> descElements = new ArrayList<>();
         // when
-        Map<String, Boolean> summary = week.generateSummary(values);
+        Map<String, Boolean> description = week.createDescription(descElements);
         // then
-        assertThat(summary.containsKey("default")).isTrue();
+        assertThat(description.containsKey("default")).isTrue();
     }
 
     @Test
     void skip_key_when_its_values_are_empty() {
         // given
-        Map<String, List<Double>> values = new HashMap<>(Map.of(
-                "precipitation", Collections.emptyList(),
-                "wind", List.of(20.0, 20.0, 20.0, 20.0, 0.0, 0.0, 0.0)
-        ));
+        List<DescriptionElement> descElements = List.of(
+                new Precipitation("precipitation", Collections.emptyList()),
+                new Wind("wind", List.of(20.0, 20.0, 20.0, 20.0, 0.0, 0.0, 0.0))
+        );
         // when
-        Map<String, Boolean> summary = week.generateSummary(values);
+        Map<String, Boolean> description = week.createDescription(descElements);
         // then
-        assertThat(summary.containsKey("precipitation")).isFalse();
-        assertThat(summary.containsKey("wind")).isTrue();
+        assertThat(description.containsKey("precipitation")).isFalse();
+        assertThat(description.containsKey("wind")).isTrue();
     }
 
-    // precipitation_sum (mm): 4 days * 5 mm = 20 mm (<= sum)
-    // 5 mm - rainy day
-    // wind (km/h): 4 days * 20 km/h = 80 km/h (<= sum)
-    // avg 20 km/h - windy day
     @Test
     void add_precipitation_true_when_sum_is_20_mm_and_wind_true_when_sum_is_80_kmh() {
         // given
-        Map<String, List<Double>> values = new HashMap<>(Map.of(
-                "precipitation", List.of(10.0, 10.0, 0.0, 0.0, 8.0, 10.0, 10.0),
-                "wind", List.of(20.0, 20.0, 20.0, 20.0, 0.0, 0.0, 0.0)
-        ));
+        List<DescriptionElement> descElements = List.of(
+                new Precipitation("precipitation", List.of(10.0, 10.0, 0.0, 0.0, 8.0, 10.0, 10.0)),
+                new Wind("wind", List.of(20.0, 20.0, 20.0, 20.0, 0.0, 0.0, 0.0))
+        );
         // when
-        Map<String, Boolean> summary = week.generateSummary(values);
+        Map<String, Boolean> description = week.createDescription(descElements);
         // then
-        assertThat(summary.get("precipitation")).isTrue();
-        assertThat(summary.get("wind")).isTrue();
+        assertThat(description.get("precipitation")).isTrue();
+        assertThat(description.get("wind")).isTrue();
     }
 
     @Test
     void add_precipitation_false_when_sum_is_less_then_20_mm() {
         // given
-        Map<String, List<Double>> values = new HashMap<>(Map.of(
-                "precipitation", List.of(0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0),
-                "wind", Collections.emptyList()
-        ));
+        List<DescriptionElement> descElements = List.of(
+                new Precipitation("precipitation", List.of(0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0)),
+                new Wind("wind", Collections.emptyList())
+        );
         // when
-        Map<String, Boolean> summary = week.generateSummary(values);
+        Map<String, Boolean> description = week.createDescription(descElements);
         // then
-        assertThat(summary.get("precipitation")).isFalse();
+        assertThat(description.get("precipitation")).isFalse();
     }
 
     @Test
     void add_wind_false_when_sum_is_less_then_80_kmh() {
         // given
-        Map<String, List<Double>> values = new HashMap<>(Map.of(
-                "precipitation", Collections.emptyList(),
-                "wind", List.of(0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0)
-        ));
+        List<DescriptionElement> descElements = List.of(
+                new Precipitation("precipitation", Collections.emptyList()),
+                new Wind("wind", List.of(0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0))
+        );
         // when
-        Map<String, Boolean> summary = week.generateSummary(values);
+        Map<String, Boolean> description = week.createDescription(descElements);
         // then
-        assertThat(summary.get("wind")).isFalse();
+        assertThat(description.get("wind")).isFalse();
     }
 }
